k8s/overlays/test/storage-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: masterino-postgres
spec:
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: masterino-test-essd-retain
        resources:
          requests:
            storage: 20Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: masterino-redis
spec:
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: masterino-test-essd-retain
        resources:
          requests:
            storage: 20Gi
